# rvv_kernel_tools

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  convert_rvv_to_scalar.py  exp_macro.txt  exp_scalar_functions.h  exp_test_config.json  plot_ulp_errors.py  rvv_conversion_config.json  sin_macro.txt  sin_scalar_functions.h  sin_test_config.json  validate_scalar.cpp
